group 'com.jerome'
version '1.0-SNAPSHOT'

apply plugin: 'java'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.1.7'

    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.8'

    compile group: 'commons-io', name: 'commons-io', version: '2.6'

    testCompile group: 'junit', name: 'junit', version: '4.12'

    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.23.4'

    testCompile group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.0'

    testCompile group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.0'

}
